--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Sum leh Pai</title>
+<title>Ka Sum leh Pai</title>
 <style>
   body { font-family: Arial; background:#121212; color:#fff; margin:0; padding:0; }
   header { background:#1f1f1f; padding:15px; text-align:center; font-size:22px; font-weight:bold; }
@@ -19,7 +19,7 @@
 </style>
 </head>
 <body>
-<header>Sum Leh Pai</header>
+<header>Ka Sum Leh Pai</header>
 
 <div class="container">
 
